--- a/pymaceuticals_starter.ipynb
+++ b/pymaceuticals_starter.ipynb
@@ -10,7 +10,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Look across all previously generated figures and tables and write at least three observations or inferences that can be made from the data. Include these observations at the top of notebook.\n",
+    "\n",
+    "Ramicane and Capomulin both resulted in lower tumor volumes than Infubinol and Ceftamin. This means that they may be more effective. \n",
+    "\n",
+    "Mouse s185 had decreasing tumor volume across time points, which means that Capomulin was effective for reducing their tumor. \n",
+    "\n",
+    "Increasing mouse weight is associated with increasing tumor volume, which means that bigger mice have bigger tumors on average, which is sensible. "
+   ]
   },
   {
    "cell_type": "code",
